2008-06-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tga.c: changed user interface for specifying the
	origin. Fixed header for origin at top-left (bug #450070).

2008-06-04  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-scale.c
	* app/gegl/gimpoperationdesaturate.h
	* app/tools/gimprectangletool.c
	* app/widgets/gimpradioaction.h
	* app/widgets/gimptoggleaction.h: various fixes tpo make gtk-doc
	happy.

2008-06-04  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpcropoptions.c
	* app/tools/gimprectangleoptions.c
	* app/tools/gimprectangleselectoptions.c: fixed handling of the
	"highlight" property that needs different default values for the
	Crop and Rectangle Select tools (bug #536582).

2008-06-04  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpairbrushoptions.c: removed trailing whitespace.

2008-06-04  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdrawable-operation.c (gimp_drawable_apply_operation):
	no need to check for the 'dont-cache' property now that we depend
	on the newer GEGL.

2008-06-04  Sven Neumann  <sven@gimp.org>

	* INSTALL: updated GEGL version and also mention babl.

	* app/gegl/gimp-gegl.c (gimp_gegl_init): configure the GEGL tile
	size to match the GIMP tile size.

2008-06-04  Michael Natterer  <mitch@gimp.org>

	* configure.in: depend on GEGL >= 0.0.17, add check for
	BABL => 0.0.21.

	* app/sanity.c: bump GEGL sanity check and add BABL check.

	* app/gegl/gimpoperationcolorbalance.c
	* app/gegl/gimpoperationcolorize.c
	* app/gegl/gimpoperationcurves.c
	* app/gegl/gimpoperationdesaturate.c
	* app/gegl/gimpoperationhuesaturation.c
	* app/gegl/gimpoperationlevels.c
	* app/gegl/gimpoperationposterize.c
	* app/gegl/gimpoperationthreshold.c: adapt to new process()
	signature.

2008-06-03  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpitemcombobox.c: fixed comments.

2008-06-03  Sven Neumann  <sven@gimp.org>

	* app/widgets/widgets-enums.[ch]: changed descriptions for
	GimpHistogramScale enum.
