@@ -1,5 +1,10 @@
 2008-06-04  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/red-eye-removal.c: fixed weird handling of the
+	threshold parameter. Some unrelated minor cleanups.
+
+2008-06-04  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/tga.c: changed user interface for specifying the
 	origin. Fixed header for origin at top-left (bug #450070).
 
